image recognition implemented

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
-# API Keys (Replace with your actual keys)
-TINEYE_API_KEY=your_tineye_api_key_here
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-SENSITY_API_TOKEN=your_sensity_token_here
-ACRCLOUD_ACCESS_KEY=your_acrcloud_key_here
-ACRCLOUD_SECRET_KEY=your_acrcloud_secret_key_here
+# Google Vision API (Easy setup, great results)
+GOOGLE_VISION_API_KEY=x
+
+# AWS (Optional - for even better results)
+AWS_ACCESS_KEY_ID=x
+AWS_SECRET_ACCESS_KEY=x
 
 # Application Settings
 SECRET_KEY=your-super-secret-key-change-in-production
